// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`result.response > should include response in the result 1`] = `
{
  "body": {},
  "headers": {},
}
`;

exports[`telemetry > should not record telemetry inputs / outputs when disabled 1`] = `
[
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank",
      "ai.settings.maxRetries": 2,
      "ai.usage.tokens": NaN,
      "operation.name": "ai.rerank",
    },
    "events": [],
    "name": "ai.rerank",
  },
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank.doRerank",
      "ai.settings.maxRetries": 2,
      "ai.usage.tokens": NaN,
      "operation.name": "ai.rerank.doRerank",
    },
    "events": [],
    "name": "ai.rerank.doRerank",
  },
]
`;

exports[`telemetry > should record telemetry data when enabled (single call path) 1`] = `
[
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank",
      "ai.rerankedDocuments": [
        "{"index":1,"relevanceScore":0.9,"document":"rainy day in the city"}",
        "{"index":0,"relevanceScore":0.8,"document":"sunny day at the beach"}",
        "{"index":2,"relevanceScore":0.7,"document":"cloudy day in the mountains"}",
      ],
      "ai.settings.maxRetries": 2,
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 10,
      "ai.values": [
        ""sunny day at the beach"",
        ""rainy day in the city"",
        ""cloudy day in the mountains"",
      ],
      "operation.name": "ai.rerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank",
  },
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank.doRerank",
      "ai.rerankedDocuments": [
        "{"index":1,"relevanceScore":0.9,"document":"rainy day in the city"}",
        "{"index":0,"relevanceScore":0.8,"document":"sunny day at the beach"}",
        "{"index":2,"relevanceScore":0.7,"document":"cloudy day in the mountains"}",
      ],
      "ai.settings.maxRetries": 2,
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 10,
      "ai.values": [
        ""sunny day at the beach"",
        ""rainy day in the city"",
        ""cloudy day in the mountains"",
      ],
      "operation.name": "ai.rerank.doRerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank.doRerank",
  },
]
`;
